Added button to generate Random number
Also styled it

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@ The cell with same number should be highlighted in some way on the bingo board.-
 <body>
     <h1>Welcome to Bingo Challenge</h1>
 
-    <div id="numbers-container">
+    <div id="numbers-container"></div>
 
-    </div>
+    <input type="button" value="Generate Random Number" id="button" />
+
 
 </body>
 
