Highlighted Random number on Bingo Board
Also added some CSS

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ The cell with same number should be highlighted in some way on the bingo board.-
 
     <div id="numbers-container"></div>
 
-    <input type="button" value="Generate Random Number" id="button" />
+    <input type="button" value="Generate Random Number" id="button" onclick="selectNumber()" />
 
 
 </body>
